# pso-hpc

./: .gitignore  LICENSE.md  README.md
bubble-sort-test/: bubble-sort-hpc.c  bubble-sort-old.pbs  bubble-sort-parallel.c  bubble-sort.c  bubble-sort.pbs
gaussian-elimination/: gaussian-elimination-hpc.c  gaussian-elimination-serial.c  gaussian-elimination.c  gem-2.pbs  gem-hpc-v2.c  gem-hpc.c  gem.c  gem.pbs
hpc-test/: tensor-product.c  tensor-product.pbs
hpc-test/logs/: tensor-product.o161772  tensor-product.o161773  tensor-product.o161774  tensor-product.o161775  tensor-product.o161778  tensor-product.o161779
mpi-tutorial/: Makefile  hello_world.c  ping_pong.c  send_recv.c
omp-tutorial/: ex1.c  ex2.c  ex3.c  ex4.c
pso/: Untitled Diagram.drawio  ngspice-communication.drawio  pso-hpc-v2.c  pso-hpc.c  pso.c
pso-mpi/: CMakeLists.txt  mos_buffer5y.cir  pso-mpi.c
pso/instance-1/: pso-hpc.c  pso.c
pso/instance-2/: pso-gem.c  pso.c
pso/ngspice-dynamic/: CMakeLists.txt  pso-hpc.c
pso/ngspice-integration/: ipc.c  pso-hpc.c  pso.c  steps  test.c  test.cir
pso/ngspice-shared/: pso-hpc.c  pso.c
pso/ngspice-shared/mos-buffer/: mos_buffer5y.cir  mos_buffer7y.cir  pso  pso-hpc.c
pso/ngspice-shared/mptt/: pso-hpc.c  pso.c
pso/ngspice-shared/rc-transient/: pso  pso-hpc.c  rc.cir
